--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.1.14",
     "@tailwindcss/typography": "^0.5.10",
     "clsx": "^2.1.0",
     "latest": "^0.2.0",
