--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.1.14",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-query": "^5.24.1",
+    "@trpc/client": "^11.0.0-next-beta.294",
+    "@trpc/next": "^11.0.0-next-beta.294",
+    "@trpc/react-query": "^11.0.0-next-beta.294",
+    "@trpc/server": "^11.0.0-next-beta.294",
     "clsx": "^2.1.0",
     "latest": "^0.2.0",
     "lucide-react": "^0.336.0",
@@ -18,7 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
