--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@trpc/react-query": "^11.0.0-next-beta.294",
     "@trpc/server": "^11.0.0-next-beta.294",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "latest": "^0.2.0",
     "lucide-react": "^0.336.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
