--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^11.0.0-next-beta.294",
     "@trpc/react-query": "^11.0.0-next-beta.294",
     "@trpc/server": "^11.0.0-next-beta.294",
+    "@uploadthing/react": "^6.3.2",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "latest": "^0.2.0",
@@ -28,6 +29,7 @@
     "react-pdf": "^7.7.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.5.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
