--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.14",
+    "@langchain/openai": "^0.0.19",
+    "@langchain/pinecone": "^0.0.3",
+    "@pinecone-database/pinecone": "^2.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.24.1",
     "@trpc/client": "^11.0.0-next-beta.294",
@@ -18,11 +21,15 @@
     "@trpc/react-query": "^11.0.0-next-beta.294",
     "@trpc/server": "^11.0.0-next-beta.294",
     "@uploadthing/react": "^6.3.2",
+    "ai": "^3.0.11",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "langchain": "^0.1.27",
     "latest": "^0.2.0",
     "lucide-react": "^0.336.0",
     "next": "14.1.0",
+    "openai": "^4.29.0",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
