--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/openai": "^0.0.19",
     "@langchain/pinecone": "^0.0.3",
     "@pinecone-database/pinecone": "^2.1.0",
+    "@prisma/client": "^5.11.0",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.24.1",
     "@trpc/client": "^11.0.0-next-beta.294",
@@ -53,7 +54,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.10.2",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
