--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.1.14",
     "@langchain/openai": "^0.0.19",
     "@langchain/pinecone": "^0.0.3",
+    "@mantine/hooks": "^7.6.2",
     "@pinecone-database/pinecone": "^2.1.0",
     "@prisma/client": "^5.11.0",
     "@tailwindcss/typography": "^0.5.10",
