--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/react-query": "^11.0.0-next-beta.294",
     "@trpc/server": "^11.0.0-next-beta.294",
     "@uploadthing/react": "^6.3.2",
+    "@xenova/transformers": "^2.16.1",
     "ai": "^3.0.11",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
