--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@huggingface/inference": "^2.6.6",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.14",
     "@langchain/openai": "^0.0.19",
     "@langchain/pinecone": "^0.0.3",
@@ -25,6 +26,7 @@
     "@uploadthing/react": "^6.3.2",
     "@xenova/transformers": "^2.16.1",
     "ai": "^3.0.11",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "langchain": "^0.1.27",
